# diet

./: .gitignore  PLAN.md  deploy.sh  extract_sources.py  pyproject.toml
data/: discovery_terms.yaml  dri.json  locations.yaml  nutrients_current.json  nutrition_overrides.yaml  prices_current.json  sku_candidates.yaml  skus.yaml  supplements.yaml  walmart_skus.yaml
diet/: __init__.py  __main__.py  cli.py  curate.py  discover.py  export.py  foods.py  ingest.py  nutrition.py  solver.py  supplements.py  targets.py  units.py  util.py
scripts/: bootstrap_walmart_skus.py  build_sample_data.py
site/: data.json  index.html
sources/: 01_wikipedia_stigler_diet.md  02_stiglers_diet_problem_revisited_2001.md  03_google_or_tools_stigler.md  04_frontiers_2018_lp_diet_review.md  05_neos_guide_diet_problem.md  06_cambridge_diet_history.md  07_springer_2025_balancing_health_sustainability.md  08_wiley_2023_systematic_review_lp_diet.md  09_mdpi_2015_low_price_low_climate.md  10_wikipedia_planetary_health_diet.md  11_brazilian_carbon_footprint_meals.md  12_arxiv_2025_decision_space_diversity.md  13_frontiers_2026_multi_objective_national_diet.md  14_pmc_spanish_multi_objective_diet.md  15_pmc_planetary_boundaries_diet.md  16_google_blog_2014_ten_cent_diet.md  17_grokipedia_stigler_diet.md  18_mit_blossoms_optimizing_diet.md  19_eat_lancet_summary_report.md  20_eat_lancet_planetary_health_diet.md  README.md
tests/: test_curate.py  test_diagnose.py  test_fdc_mapping.py  test_kroger_helpers.py  test_nutrition.py  test_solver.py  test_units.py  test_walmart_ingest.py
(+5 files in other folders)
