[project]
name = "diet"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.1.4",
    "cryptography>=42",
    "pyyaml>=6.0.3",
    "scipy>=1.14",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[project.scripts]
diet = "diet.cli:main"

[tool.uv]
package = true
# Delay newly uploaded releases to reduce exposure to supply-chain attacks.
exclude-newer = "7 days"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["diet*"]
